# zk-img-editor

./: .gitignore  .gitmodules  README.md
contracts/: ImgProof.sol  package-lock.json
foundry/: README.md
foundry/src/: MerkleProof.sol  MerkleTree.sol
img-editor/lib/src/: lib.rs
img-editor/program/: Cargo.toml
img-editor/program/elf/: riscv32im-succinct-zkvm-elf
img-editor/program/src/: main.rs
img-editor/script/: Cargo.toml
img-editor/script/src/: example.rs  main.rs  transformations.json
