[workspace]
[package]
version = "0.1.0"
name = "img-editor-script"
edition = "2021"

[dependencies]
image = "0.24.8"
serde_json = "1.0.113"
sp1-core = { git = "https://github.com/succinctlabs/sp1.git" }
lib = { path = "../lib" }
ecdsa = "0.16.9"
hex-literal = "0.4.1"
p256 = "0.13.2"
sha2 = "0.10.8"
rocket = "0.5.0"
hex = "0.4.3"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "example"
path = "src/example.rs"